Extensions WebUI: add ui::SelectFileDialog::SELECT_EXISTING_FOLDER

Use SELECT_EXISTING_FOLDER when choosing an unpacked extension. Disable
folder creation for SELECT_EXISTING_FOLDER and SELECT_UPLOAD_FOLDER (for
all desktop platforms excluding kde). For GTK when selecting a folder,
show only folders.

Bug: 772180
Change-Id: I0f513180ff7f10b5af91e8c518b3d9fd4b0fc8f1
Reviewed-on: https://chromium-review.googlesource.com/1019732
Commit-Queue: Esmael El-Moslimany <aee@chromium.org>
Reviewed-by: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561344}
Former-commit-id: cc859bf07d39ffb99f1e19827c894327fb4d9849